--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -9,7 +9,30 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <style type="text/css">
     div.weiterrunter {
-        margin-top: 40px
+        margin-top: 40px;
+        padding-bottom: 100px;
+    }
+    .page-footer{
+        padding-top: 20px;
+        background-color: #ffffff;
+    }
+    .fa-1x {
+    font-size: 1.5rem;
+    }
+    .navbar-toggler.toggler-example {
+    cursor: pointer;
+    }
+    .dark-blue-text {
+    color: #0A38F5;
+    }
+    .dark-pink-text {
+    color: #AC003A;
+    }
+    .dark-amber-text {
+    color: #ff6f00;
+    }
+    .dark-teal-text {
+    color: #004d40;
     }
     </style>
     {% block style %}
@@ -28,7 +51,7 @@
   <!-- Collapse button -->
   <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
     aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
-        class="fas fa-bars fa-1x"></i></span></button>
+        class="fas fa-bars fa-1x"></i>X</span></button>
 
   <!-- Collapsible content -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent1">
@@ -104,6 +127,47 @@
       {% block content %}
       {% endblock content %}
     </div>
+
+<!-- Footer -->
+<footer class="page-footer fixed-bottom">
+  <!-- Footer Elements -->
+  <div class="container">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-md-6 mb-4">
+        <!-- Form -->
+        <form class="form-inline my-2 my-lg-0" action="{% url 'search:umfrage-suche' %}" method="post">
+            {% csrf_token %}
+            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Umfrage suchen" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Suche</button>
+        </form>
+        <!-- Form -->
+      </div>
+      <!--Grid column-->
+      <div class="col-md-6 mb-4">
+        <form class="form-inline" style="margin-left: 50px;" action="{% url 'user_auth:login' %}" method="post">
+          {% csrf_token %}
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">@</span>
+            </div>
+            <input type="text" class="form-control" placeholder="Username" name="username" aria-label="Username" aria-describedby="basic-addon1" style="margin-right: 8px;">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon2">#</span>
+            </div>
+            <input type="text" class="form-control" placeholder="Password" name="password" aria-label="Password" aria-describedby="basic-addon2" style="margin-right: 8px;">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+          </div>
+        </form>
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+  <!-- Footer Elements -->
+</footer>
+<!-- Footer -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
