--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -14,11 +14,11 @@
     }
     .page-footer{
         padding-top: 20px;
-        background-color: #ffffff;
+        background-color: #aacdcd;
     }
 
     .navbar {
-        background-color: #ECD5CD;
+        background-color: #7fb5b5;
     }
 
     .fa-1x {
