--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -10,9 +10,9 @@
     <style type="text/css">
     div.weiterrunter {
         margin-top: 40px;
-        padding-bottom: 100px;
     }
     .page-footer{
+        position: sticky;
         padding-top: 20px;
         background-color: #aacdcd;
     }
@@ -48,7 +48,7 @@
 
 
 <!--Navbar-->
-<nav class="navbar navbar-light light-blue lighten-4">
+<nav class="navbar navbar-light light-blue lighten-4 sticky-top">
 
   <!-- Navbar brand -->
   <a class="navbar-brand" href="/">Micha goes Python</a>
