--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -10,9 +10,11 @@
     <style type="text/css">
     div.weiterrunter {
         margin-top: 40px;
+        margin-bottom: 100px;
+
     }
     .page-footer{
-        position: sticky;
+        position: fixed;
         padding-top: 20px;
         background-color: #aacdcd;
     }
@@ -52,7 +54,8 @@
 
   <!-- Navbar brand -->
   <a class="navbar-brand" href="/">Micha goes Python</a>
-
+  <a class="navbar-brand" href="/poll/">Umfragen</a>
+  <a class="navbar-brand" href="/forum/">Forum</a>
   <!-- Collapse button -->
   <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1"
     aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation"><span class="dark-blue-text"><i
