--- a/apps/forum/templates/forum/edit.html
+++ b/apps/forum/templates/forum/edit.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <div class="container-fluid">
-    <form id="topic-form" action="{% url 'forum:post_new' %}" method="POST" >
+    <form id="topic-form" action="{% url 'forum:post_edit' topic.slug %}" method="POST" >
         <div class="row">
             {% csrf_token %}
             {% for field in form %}
@@ -11,7 +11,7 @@
                 {{ field }}
             </div>
             {% endfor %}
-            <input type="submit" class="btn btn-primary" value="Create Topic" />
+            <input type="submit" class="btn btn-primary" value="Edit Topic" />
 
         </div>
     </form>
