--- a/apps/forum/templates/forum/edit.html
+++ b/apps/forum/templates/forum/edit.html
@@ -1,8 +1,9 @@
 {% extends 'index/base.html' %}
 {% load static %}
 {% block content %}
+{% if user.is_authenticated %}
 <div class="container-fluid">
-    <form id="topic-form" action="{% url 'forum:post_edit' topic.slug %}" method="POST" >
+    <form id="topic-form" action="{% url 'forum:post_edit' form.slug.value %}" method="POST" >
         <div class="row">
             {% csrf_token %}
             {% for field in form %}
@@ -17,6 +18,9 @@
     </form>
 </div>
 <hr />
+{% else %}
+<h2>EINLOGGEN!</h2>
+{% endif %}
 {% endblock content %}
 
 
