--- a/apps/forum/templates/forum/topic.html
+++ b/apps/forum/templates/forum/topic.html
@@ -14,6 +14,25 @@
 
 <p class="lead">{{ topic.posting|linebreaksbr }}</p>
 
+<hr />
+
+   {% if topic.post_set.all %}
+   <h2>Antworten</h2>
+     {% for choice in topic.post_set.all %}
+       <div class="bd-example">
+          <blockquote class="blockquote">
+          <p>{{choice.post}}</p>
+           <footer>Autor: <cite title="Source Title">{{choice.author}}</cite> | Datum: <cite title="Source Title">{{choice.publish_time}}</cite></footer>
+          </blockquote>
+       </div>
+     {% endfor %}
+   {% else %}
+       <p class="lead">Es sind leider noch keine Antworten vorhanden. Trag doch gleich eine ein!</p>
+   {% endif %}
+
+
+BUTON ZUM POSTEN
+
 {% else %}
 <h2>Kein Topic gefunden</h2>
 {% endif %}
