--- a/apps/forum/templates/forum/index.html
+++ b/apps/forum/templates/forum/index.html
@@ -12,7 +12,7 @@
 
 {% if user.is_authenticated %}
 <h3>Thema erstellen</h3>
-     <a href="{%url 'forum:post_new'%}"><button type="submit" class="btn btn-lg btn-primary">Anlegen</button></a>
+     <a href="{%url 'forum:topic_new'%}"><button type="submit" class="btn btn-lg btn-primary">Anlegen</button></a>
 {% endif %}
 
 <h2>Aktuell offene Topics</h2>
