User Auth aktualisiert - sollte jetzt laufen.

--- a/apps/forum/templates/forum/index.html
+++ b/apps/forum/templates/forum/index.html
@@ -14,7 +14,7 @@
 <h3>Thema erstellen</h3>
      <a href="{%url 'forum:topic_new'%}"><button type="submit" class="btn btn-lg btn-primary">Anlegen</button></a>
 {% endif %}
-
+Ping
 <h2>Aktuell offene Topics</h2>
 <ul>
     {% for topic in topics %}
