#2 Neues Menü und Edit Optionen

--- a/apps/forum/templates/forum/edit.html
+++ b/apps/forum/templates/forum/edit.html
@@ -12,7 +12,7 @@
                 {{ field }}
             </div>
             {% endfor %}
-            <input type="submit" class="btn btn-primary" value="Edit Topic" />
+            <input type="submit" class="btn btn-warning btn-sm" value="Edit Topic" />
 
         </div>
     </form>
