--- a/apps/forum/templates/forum/topic.html
+++ b/apps/forum/templates/forum/topic.html
@@ -17,10 +17,11 @@
 {% if topic %}
 
 <h1>{{ topic.name }}</h1>
-<h6>Anzahl Antworten {{ count }}</h6>
 {% if user.is_authenticated %}
-     <a class="btn btn-default" href="{% url 'forum:topic_edit' topic.slug %}"><span class="glyphicon glyphicon-pencil">#</span></a>
+  <a class="btn btn-warning btn-sm" href="{% url 'forum:topic_edit' topic.slug %}"><i>Edit Topic</i></a><br /><br />
 {% endif %}
+
+<h6>Anzahl Antworten {{ count }}</h6>
 
 <p class="font-weight-light"><b>Erstellt vor</b> {{ topic.publish_time|timesince }} | <b>Autor:</b> {{ topic.author }}</p>
 
