--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -50,7 +50,7 @@
 
 
 <!--Navbar-->
-<nav class="navbar navbar-light light-blue lighten-4 sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <!-- Navbar brand -->
   {% if user.is_authenticated %}
     <a class="navbar-brand" href="/">Hallo {{user.username}}</a>
@@ -58,12 +58,20 @@
     <a class="navbar-brand" href="/">Micha goes Python</a>
   {% endif %}
 
-  <ul class="nav nav-tabs">
+  <ul class="nav">
   <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle active" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Menü</a>
+    <a class="navbar-brand dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">|  Menü</a>
     <div class="dropdown-menu">
       <a class="dropdown-item" href="/poll/">Umfrage</a>
       <a class="dropdown-item" href="/forum/">Forum</a>
+      <div class="dropdown-divider"></div>
+      <div>
+        <form class="form-inline" action="{% url 'search:umfrage-suche' %}" method="post">
+        {% csrf_token %}
+        <input class="form-control" style="margin-left:10px; margin-right:10px;" type="search" name="search" placeholder="Suchen nach ..." aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" style="display: none;" type="submit">Go</button>
+        </form>
+      </div>
       {% if user.is_authenticated %}
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="/intern/">Intern</a>
@@ -71,6 +79,7 @@
     </div>
   </li>
   </ul>
+
 </nav>
 
     <div class="container weiterrunter">
@@ -79,21 +88,11 @@
     </div>
 
 <!-- Footer -->
-<footer class="page-footer position-sticky">
+<footer class="page-footer bg-light position-sticky">
   <!-- Footer Elements -->
   <div class="container">
     <!--Grid row-->
     <div class="row">
-      <!--Grid column-->
-      <div class="col-md-6 mb-4">
-        <!-- Form -->
-        <form class="form-inline my-2 my-lg-0" action="{% url 'search:umfrage-suche' %}" method="post">
-            {% csrf_token %}
-            <input class="form-control mr-sm-2" type="search" name="search" placeholder="Umfrage suchen" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Suche</button>
-        </form>
-        <!-- Form -->
-      </div>
       <!--Grid column-->
       <div class="col-md-6 mb-4">
         <form class="form-inline" style="margin-left: 50px;" action="{% url 'user_auth:login' %}" method="post">
