--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -122,12 +122,13 @@
 </head>
 
 <body>
+
 <!-- Navbar -->
 <nav class="navbar navbar-expand-sm  navbar-light bg-light sticky-top ">
+    <a class="navbar-brand" href="/"><img src="/static/polls/logo_new.png" width="80px" height="56px" style="float: right;" alt="Logo"></a>
   {% if user.is_authenticated %}
     <a class="navbar-brand" href="/">Hallo {{user.username}}</a>
   {% else %}
-    <a class="navbar-brand" href="/">Micha goes Python</a>
     <button class="btn btn-success " data-toggle="modal" data-target="#modalLoginForm">Anmelden</button>
   {% endif %}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
@@ -175,7 +176,6 @@
   </div>
 </div>
 <!-- Login -->
-
 
 <div class="container" style="margin-top:20px; margin-bottom:20px;">
   {% block content %}
