--- a/apps/index/templates/index/base.html
+++ b/apps/index/templates/index/base.html
@@ -125,7 +125,7 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-sm  navbar-light bg-light sticky-top ">
-    <a class="navbar-brand" href="/"><img src="logo_new.png" width="80px" height="56px" style="float: right;" alt="Logo"></a>
+    <a class="navbar-brand" href="/"><img src="/static/polls/logo_new.png" width="80px" height="56px" style="float: right;" alt="Logo"></a>
   {% if user.is_authenticated %}
     <a class="navbar-brand" href="/">Hallo {{user.username}}</a>
   {% else %}
